[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neuforge-legends"
version = "1.0.0"
description = "18 AI investment agents modeled on legendary investors. Run your own committee."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "langchain-groq>=0.2",
    "langchain>=0.3",
    "langgraph>=0.2",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "requests>=2.31",
    "pandas>=2.0",
]
keywords = ["ai", "hedge-fund", "investing", "agents", "langchain", "groq", "neuforge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://neuforge.app/legends"
Repository = "https://github.com/neuforge/neuforge-legends"
Documentation = "https://neuforge.app/docs"

[project.scripts]
neuforge = "neuforge.cli:main"
